fix: align text to right and refactor SASS

--- a/scss/inc/rtl/_feedback.scss
+++ b/scss/inc/rtl/_feedback.scss
@@ -6,16 +6,13 @@
     .test-runner-scope {
         .qti-item [class^="feedback-"].small,
         .qti-item [class*=" feedback-"].small {
-            text-align: left;
             padding: 8px 45px 8px 20px;
-        }
 
-        .qti-item [class^="feedback-"].small>[class^="icon-"],
-        .qti-item [class^="feedback-"].small>[class*=" icon-"],
-        .qti-item [class*=" feedback-"].small>[class^="icon-"],
-        .qti-item [class*=" feedback-"].small>[class*=" icon-"] {
-            left: auto;
-            right: 10px;
+            &>[class^="icon-"],
+            &>[class*=" icon-"] {
+                left: auto;
+                right: 10px;
+            }
         }
     }
 }
